// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  padding: 0 14px;
  text-align: center;
  line-height: 1.18;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  disabled={false}
  type="button"
>
  <div
    className="c0"
  >
    Click me
  </div>
</button>
`;

exports[`it works as block 1`] = `
.c0 {
  padding: 0 14px;
  text-align: center;
  line-height: 1.18;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  disabled={false}
  type="button"
>
  <div
    className="c0"
  >
    Click me
  </div>
</button>
`;

exports[`it works as block loading 1`] = `
.c0 {
  padding: 0 14px;
  text-align: center;
  line-height: 1.18;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  disabled={true}
  type="button"
>
  <div
    className="c0"
  >
    Click me
  </div>
</button>
`;

exports[`it works as block outline 1`] = `
.c0 {
  padding: 0 14px;
  text-align: center;
  line-height: 1.18;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  disabled={false}
  type="button"
>
  <div
    className="c0"
  >
    Click me
  </div>
</button>
`;

exports[`it works as disabled 1`] = `
.c0 {
  padding: 0 14px;
  text-align: center;
  line-height: 1.18;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  disabled={true}
  type="button"
>
  <div
    className="c0"
  >
    Click me
  </div>
</button>
`;

exports[`it works as outline small 1`] = `
.c0 {
  padding: 0 14px;
  text-align: center;
  line-height: 1.18;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  disabled={false}
  type="button"
>
  <div
    className="c0"
  >
    Click me
  </div>
</button>
`;

exports[`it works as outline small disabled 1`] = `
.c0 {
  padding: 0 14px;
  text-align: center;
  line-height: 1.18;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  disabled={true}
  type="button"
>
  <div
    className="c0"
  >
    Click me
  </div>
</button>
`;

exports[`it works as small loading 1`] = `
.c0 {
  padding: 0 14px;
  text-align: center;
  line-height: 1.18;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  disabled={true}
  type="button"
>
  <div
    className="c0"
  >
    Click me
  </div>
</button>
`;
